2001-04-02  Federico Mena Quintero  <federico@ximian.com>

	* acinclude.m4: "sourceforge.net", not "sourceforce.net".

2001-03-24  Anders Carlsson   <andersca@gnu.org>

	* configure.in (REBUILD): Add gconf-2.0.pc to AC_OUTPUT files.

2001-03-23  Marius Andreiana  <mandreiana@yahoo.com>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS

2001-03-18  Martin Baulig  <baulig@suse.de>

	* gconf/gthreadpool.[ch]: Removed.
	* gconf/gconf-glib-private.h: Removed.
	* gconf/gconf-glib-public.h: Removed.

	* gconf/gconf-client.[ch]: Moved here from wrappers/gtk/
	and migrated to use GObject.

	* gconf/testgconfclient.c: Moved here from wrappers/gtk/.

	* gconf/gconf-internals.h
	(gconf_CORBA_Object_hash, gconf_CORBA_Object_equal):
	New static inline functions.

	* gconf/gconfmarshal.list: New file.

	* gconf/gconftool.c: Use libxml 2.

	* backends/xml-backend.c, backends/xml-cache.h,
	backends/xml-dir.c, backends/xml-dir.h,
	backends/xml-entry.c, backends/xml-entry.h: Use libxml 2.

	* wrappers/gtk/*: Moved to gconf/.

2001-03-18  Martin Baulig  <baulig@suse.de>

	We're now on the GNOME 2.0 platform.

	* configure.in: Set MAJOR_VERSION to 2, use pkg-config to
	check for stuff; GTK+ is now optional and only used for
	the examples; depend on ORBit2.

	* acinclude.m4: Add the contents of
	gnome-common/macros2/gnome-pkgconfig.m4 here.

	* Makefile.am: Install gconf-2.0.pc.

	* gconf-2.0.pc.in: New file.

2001-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-entry.c: Merge from branch. Use xmlFree().
	* gconf/gconftool.c: Merge from branch. Use xmlFree() and
	don't free until after referencing stuff.
	
2001-03-12  Timur Bakeyev  <timur@gnu.org>

	* Makefile.am: Made warning printing a bit nicer.
	
2001-03-06  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconfd.c (gconf_main): change the periodic timeout to 15
	minutes, to be a bit more aggressive about cleanup.
	(open_append_handle): add a timeout to close the 