@@ -1,3 +1,8 @@
+Wed Apr 11 08:07:11 2001  George Lebl <jirka@5z.com>
+
+	* gconf/gconf.c (gconf_engine_unref): If unreffing the default engine
+	  set the default_engine pointer to NULL
+
 2001-04-02  Federico Mena Quintero  <federico@ximian.com>
 
 	* acinclude.m4: "sourceforge.net", not "sourceforce.net".
